--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,11 @@
+cmake_minimum_required(VERSION 3.13)
+
 project(highload_silvman)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_C_STANDARD 99)
 
-add_executable(highload_silvman src/main.cpp)
+include_directories(include)
+link_directories(lib)
+
+add_executable(highload_silvman src/main.c)
+target_link_libraries(highload_silvman libuv.a pthread)
