--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.12)
 
-project(highload_silvman)
+project(eeskorka)
 
 set(CMAKE_CXX_STANDARD 17)
 
 include_directories(include)
 link_directories(lib)
 
-add_executable(highload_silvman src/main.cpp)
-target_link_libraries(highload_silvman pthread stdc++fs)
+add_executable(eeskorka src/main.cpp src/loop/epollLoop.cpp src/loop/epollLoop.h src/server/server.cpp src/server/server.h src/server/serverConfig.cpp src/server/serverConfig.h src/server/httpServer.cpp src/server/httpServer.h src/http/HTTPResponse.cpp src/http/HTTPResponse.h src/http/HTTPRequest.cpp src/http/HTTPRequest.h)
+target_link_libraries(eeskorka pthread stdc++fs)
