--- a/cfg.conf
+++ b/cfg.conf
@@ -1,3 +1,4 @@
+# testing config
 cpu_limit 4       # maximum CPU count to use (for non-blocking servers)
 thread_limit 256  # maximum simultaneous connections (for blocking servers)
-document_root .
+document_root /home/silvman/http-test-suite
